Corrección de mediaqueries

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </div>
     <header>
            
-        <div class="presentation">
-            <h1>Hello <span class="tachado"> world</span> pale blue dot.</h1>
-            <p>Un podcast que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.</p>
-            <button>conocé más</button>
+        <div class="presentation move">
+            <h1 class="move-right">Hello <span class="tachado"> world</span> pale blue dot.</h1>
+            <p class="move-right">Un podcast que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.</p>
+            <button class="move-right">conocé más</button>
 
         </div>    
     </header>
