Adición de alt en img

--- a/index.html
+++ b/index.html
@@ -65,31 +65,31 @@
         <section class="entrevistas" id="entrevistas">
             <h2>Invitades estelares</h2>
             <div class="container">
-                <div class="galeria"><img src="images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="computadora de los años 50"></div>
-                <div class="galeria"><img src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="" class="galery"></div>
-                <div class="galeria"><img src="images/grace-hopper.png" alt="" class="galery"></div>
-                <div class="galeria"><img src="images/Katie-Bouman.png" alt="" class="galery"></div>
-                <div class="galeria"><img src="images/Margaret_Hamilton.png" alt="" class="galery"></div>
-                <div class="galeria"><img src="images/susan-kare.png" alt="" class="galery"></div>
+                <div class="galeria"><img src="images/An_E.R.A.Univac_1103_computer_in_the_1950s.png" alt="computadora de los años 50"></div>
+                <div class="galeria"><img src="images//Computer_operators_with_an_Eniac—the_world’s_first_programmable_general-purpose_computer.png" alt="Operadores de computadora con una Eniac" class="galery"></div>
+                <div class="galeria"><img src="images/grace-hopper.png" alt="Fotografía de Grace Hopper" class="galery"></div>
+                <div class="galeria"><img src="images/Katie-Bouman.png" alt="Fotografía de Katie Bouman" class="galery"></div>
+                <div class="galeria"><img src="images/Margaret_Hamilton.png" alt="Fotografía de Margaret Hamilton" class="galery"></div>
+                <div class="galeria"><img src="images/susan-kare.png" alt="Fotografía de Susan Kare" class="galery"></div>
             </div>
         </section>
         <section class="topicos" id="topicos">
             <h2>Algunos de nuestros temas</h2>
             <div class="temas">
                 <div class="grid">
-                    <img src="images/icon1.svg" alt="">
+                    <img src="images/icon1.svg" alt="Trabajo remoto">
                     <h6>Trabajo remoto</h6>
                 </div>
                 <div class="grid">
-                    <img src="images/icon2.svg" alt="">
+                    <img src="images/icon2.svg" alt="Repensando la programación">
                     <h6>Repensando la programación</h6>
                 </div>
                 <div class="grid">
-                    <img src="images/icon3.svg" alt="">
+                    <img src="images/icon3.svg" alt="Bases del código">
                     <h6>Bases del código</h6>
                 </div>
                 <div class="grid">
-                    <img src="images/icon4.svg" alt="">
+                    <img src="images/icon4.svg" alt="Seguridad informática">
                     <h6>Seguridad informática</h6>
                 </div>
             </div>
@@ -100,13 +100,14 @@
             <h3>¿Querés las últimas novedades?</h3>
             <button>escuchá los episodios</button>
         </section>
-        <div><p>@ 2019 - Hello Blue Pale Dot</p>
+        <div>
+            <p>@ 2019 - Hello Blue Pale Dot</p>
             <div class="rrss">
-                <a href="https://www.spotify.com/ar/"><i class="fab fa-spotify fa-2x"></i></a>
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="https://twitter.com/"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook-f fa-2x"></i></a>
-                <a href="https://web.telegram.org/"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                <a href="https://www.spotify.com/ar/" target="_blank"><i class="fab fa-spotify fa-2x"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
+                <a href="https://web.telegram.org/" target="_blank"><i class="fab fa-telegram-plane fa-2x"></i></a>
             </div>
         </div>
     </footer>
